# astro-generator-proxy-contracts

./: .gitignore  Cargo.toml  README.md
.github/workflows/: code_coverage.yml  release_artifacts.yml  tests_and_checks.yml
contracts/proxies/proxy_to_vkr/: Cargo.toml
contracts/proxies/proxy_to_vkr/.cargo/: config
contracts/proxies/proxy_to_vkr/src/: contract.rs  error.rs
contracts/proxies/proxy_to_vkr/src/testing/: mock_querier.rs  tests.rs
contracts/proxy_to_anc/: Cargo.toml  README.md
contracts/proxy_to_anc/examples/: schema.rs
contracts/proxy_to_anc/src/: contract.rs
contracts/proxy_to_anc/src/testing/: mock_querier.rs  tests.rs
contracts/proxy_to_apollo/: Cargo.toml  README.md
contracts/proxy_to_apollo/examples/: schema.rs
contracts/proxy_to_apollo/schema/: description.json  instantiate_msg.json
contracts/proxy_to_apollo/src/: contract.rs  state.rs
contracts/proxy_to_apollo/src/testing/: mock_querier.rs  tests.rs
contracts/proxy_to_kuji/: Cargo.toml  README.md
contracts/proxy_to_kuji/examples/: schema.rs
contracts/proxy_to_kuji/schema/: description.json
contracts/proxy_to_kuji/src/: contract.rs
contracts/proxy_to_kuji/src/testing/: mock_querier.rs  tests.rs
contracts/proxy_to_mars/: Cargo.toml  README.md
contracts/proxy_to_mars/examples/: schema.rs
contracts/proxy_to_mars/src/: contract.rs
contracts/proxy_to_mars/src/testing/: mock_querier.rs  tests.rs
contracts/proxy_to_mine/: Cargo.toml  README.md
contracts/proxy_to_mine/examples/: schema.rs
contracts/proxy_to_mine/src/: contract.rs
contracts/proxy_to_mine/src/testing/: mock_querier.rs  tests.rs
contracts/proxy_to_mirror/: Cargo.toml  README.md
contracts/proxy_to_mirror/src/: contract.rs
contracts/proxy_to_orion/: Cargo.toml  README.md
contracts/proxy_to_orion/schema/: description.json
contracts/proxy_to_orion/src/: contract.rs
contracts/proxy_to_orion/src/testing/: mock_querier.rs  tests.rs
contracts/proxy_to_psi/: Cargo.toml  README.md
contracts/proxy_to_psi/examples/: schema.rs
contracts/proxy_to_psi/src/: contract.rs
contracts/proxy_to_psi/src/testing/: mock_querier.rs  tests.rs
contracts/proxy_to_stt/: Cargo.toml  README.md
contracts/proxy_to_stt/src/: contract.rs
contracts/proxy_to_stt/src/testing/: mock_querier.rs
contracts/proxy_to_vkr/: Cargo.toml  README.md
contracts/proxy_to_vkr/examples/: proxy_to_vkr_schema.rs  schema.rs
contracts/proxy_to_vkr/src/: contract.rs  error.rs
contracts/proxy_to_vkr/src/testing/: mock_querier.rs  tests.rs
contracts/proxy_to_whale/: Cargo.toml  README.md
contracts/proxy_to_whale/examples/: schema.rs
contracts/proxy_to_whale/src/: contract.rs
contracts/proxy_to_whale/src/testing/: tests.rs
contracts/proxy_to_xDEFI/: Cargo.toml  README.md
contracts/proxy_to_xDEFI/examples/: schema.rs
contracts/proxy_to_xDEFI/schema/: query_msg.json
contracts/proxy_to_xDEFI/src/: contract.rs
contracts/proxy_to_xDEFI/src/testing/: tests.rs
contracts/stakings/staking_vkr/: Cargo.toml
contracts/stakings/staking_vkr/.cargo/: config
contracts/stakings/staking_vkr/examples/: schema.rs
contracts/stakings/staking_vkr/src/: entrypoints.rs  errors.rs  executions.rs  lib.rs  queries.rs  states.rs  utils.rs
contracts/stakings/staking_vkr/src/tests/: bond.rs  instantiate.rs  mock_querier.rs  mod.rs  test_utils.rs  unbond.rs  update_config.rs  validate.rs  withdraw.rs
scripts/: deploy.ts  deploy_script.ts  package-lock.json  package.json
scripts/chain_configs/: localterra.json  phoenix-1.json  pisco-1.json
scripts/helpers/: helpers.ts
scripts/types.d/: astroport_deploy_interfaces.ts
