[workspace]
resolver = "2"
members = [
    "contracts/proxies/proxy_to_vkr",
    "contracts/stakings/staking_vkr",
    "packages/*"
]


[profile.release]
opt-level = "z"
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true