[package]
name = "generator-proxy-to-psi"
version = "0.0.0"
authors = ["_astromartian"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = "1.0"
cosmwasm-bignumber = "2.2.0"
cw-storage-plus = "0.13.2"
schemars = "0.8.1"
serde = { version = "1.0.125", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.20" }
cw2 = "0.13.2"
cw20 = "0.13.2"
astroport = { git = "https://github.com/astroport-fi/astroport-core.git", branch = "release/terra2" }
astroport-generator-proxy = { path = "../../packages/astroport_generator_proxy", default-features = false, version = "1.0.0"}

[dev-dependencies]
cosmwasm-schema = "1.0.0"
