[package]
name = "astroport-generator-proxy-to-vkr"
version = "1.0.0"
authors = ["_astromartian"]
license = "GPL-3.0-only"
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = "1.1"
cw-storage-plus = "0.15"
thiserror = "1.0"
cw2 = "0.15"
cw20 = "0.15"
valkyrie = { git = "https://github.com/valkyrieprotocol/contracts.git", rev = "b5fcb666f17d7e291f40365756e50fc0d7b9bf54" }
astroport = { git = "https://github.com/astroport-fi/astroport-core.git", branch = "feat/separate_astroport_package" }
ap-generator-proxy = { git = "https://github.com/astroport-fi/astroport-core.git", branch = "feat/separate_astroport_package" }
ap-generator-proxy-to-vkr = { path = "../../packages/valkyrie" }
cosmwasm-schema = "1.1"
